Set up rpi pico 2

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico]
-platform = raspberrypi
-board = pico
+[env:rock7]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = rpipico2
 framework = arduino
+board_build.core = earlephilhower
+
+board_upload.maximum_size = 16777216 ; 16MB 
+board_build.filesystem_size = 8388608 ; 8MB
+board_build.filesystem = littlefs
+
+board_build.arduino.earlephilhower.usb_manufacturer = Tektite
+board_build.arduino.earlephilhower.usb_product = Rock V7
+
