--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,4 @@ board_build.filesystem = littlefs
 board_build.arduino.earlephilhower.usb_manufacturer = Tektite
 board_build.arduino.earlephilhower.usb_product = Rock V7
 
+monitor_speed = 115200
