--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 board_build.core = earlephilhower
 
 board_upload.maximum_size = 16777216 ; 16MB 
-board_build.filesystem_size = 8388608 ; 8MB
+board_build.filesystem_size = 15728640 ; 15MB - 1MB for sketch
 board_build.filesystem = littlefs
 
 board_build.arduino.earlephilhower.usb_manufacturer = Tektite
