Try getting CAN working? (its not working)

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,12 +13,10 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipico2
 framework = arduino
 board_build.core = earlephilhower
-
-board_upload.maximum_size = 16777216 ; 16MB 
-board_build.filesystem_size = 15728640 ; 15MB - 1MB for sketch
+board_upload.maximum_size = 16777216
+board_build.filesystem_size = 15728640
 board_build.filesystem = littlefs
-
 board_build.arduino.earlephilhower.usb_manufacturer = Tektite
 board_build.arduino.earlephilhower.usb_product = Rock V7
-
 monitor_speed = 115200
+lib_deps = sandeepmistry/CAN@^0.3.1
